--- a/force-app/main/default/lwc/homePage/homePage.css
+++ b/force-app/main/default/lwc/homePage/homePage.css
@@ -12,7 +12,7 @@
   .main{
     /* flex: 1; */
     /* order: 0; */
-    background: var(--primary-color);
+    background: white;
     /* flex-wrap: wrap; */
   }
 
